package com.soundlab.dockerizedjavaapi.core.domain.user;

public interface IUserType {
    User getInstance();
}
