@startuml

title __CORE DOMAIN USER's Class Diagram__\n

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        class com.soundlab.dockerizedjavaapi.core.domain.user.Admin {
            + Admin()
            + equals()
            + hashCode()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        class com.soundlab.dockerizedjavaapi.core.domain.user.Candidato {
            - respostas : List<Resposta>
            + Candidato()
            + equals()
            + getRespostas()
            + hashCode()
            + setRespostas()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        class com.soundlab.dockerizedjavaapi.core.domain.user.Empresa {
            ~ vagas : List<Vaga>
            - razaoSocial : String
            + Empresa()
            + equals()
            + getRazaoSocial()
            + getVagas()
            + hashCode()
            + setRazaoSocial()
            + setVagas()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        interface com.soundlab.dockerizedjavaapi.core.domain.user.IUserType {
            {abstract} + getInstance()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        class com.soundlab.dockerizedjavaapi.core.domain.user.User {
            - address : String
            - documentId : String
            - email : String
            - id : Long
            - name : String
            - password : String
            - phoneNumber : String
            + User()
            + equals()
            + getAddress()
            + getDocumentId()
            + getEmail()
            + getId()
            + getName()
            + getPassword()
            + getPhoneNumber()
            + getUserType()
            + hashCode()
            + setAddress()
            + setDocumentId()
            + setEmail()
            + setId()
            + setName()
            + setPassword()
            + setPhoneNumber()
            + setUserType()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        enum UserType {
          ADMINISTRADOR
          CANDIDATO
          EMPRESA
          description
          id
        }
      }
    }
  }
  

  com.soundlab.dockerizedjavaapi.core.domain.user.Admin -up-|> com.soundlab.dockerizedjavaapi.core.domain.user.User
  com.soundlab.dockerizedjavaapi.core.domain.user.Candidato -up-|> com.soundlab.dockerizedjavaapi.core.domain.user.User
  com.soundlab.dockerizedjavaapi.core.domain.user.Empresa -up-|> com.soundlab.dockerizedjavaapi.core.domain.user.User
  com.soundlab.dockerizedjavaapi.core.domain.user.User -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.user.User o-- com.soundlab.dockerizedjavaapi.core.domain.user.UserType : userType
  com.soundlab.dockerizedjavaapi.core.domain.user.UserType .up.|> com.soundlab.dockerizedjavaapi.core.domain.user.IUserType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
